ant-carousel z-index fix

--- a/src/components/HeroSection/ImageSlider/ImageSlider.scss
+++ b/src/components/HeroSection/ImageSlider/ImageSlider.scss
@@ -56,3 +56,7 @@
     }
   }
 }
+
+.ant-carousel .slick-dots {
+  z-index: 0;
+}
